refactor!
Signed-off-by: Kraity <kraits@qq.com>